Fixed issue where menu-button text could wrap to next line when viewed on narrow screen.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -10,6 +10,7 @@
 	color: #f0f0f0;
 	font-size: 20px;
 	font-family: overlock, serif;
+	white-space: nowrap;
 }
 
 .menu-button:focus,
